# ScopeSim_Templates

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENCE.txt  MANIFEST.in  README.md  README.rst  TODO.md  deleteme.fits  plot_galactic_centre_cluster.py  plot_globular_cluster.py  pyproject.toml  requirements.github_actions.txt  requirements.py35.travis.txt  requirements.readthedocs.txt  requirements.travis.txt  setup.py
.github/workflows/: minimumdependencies.yml  publish_pypi.yml  tests.yml
ScopeSim_Templates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  codemeta.json  conf.py  index.md  index.rst  modules.rst  source_object.md  starting.rst
docs/_build/doctrees/: contributions.doctree  index.doctree  modules.doctree  source_object.doctree  starting.doctree
docs/_build/doctrees/notebooks/: extragalactic.doctree  starting.doctree  stellar.doctree
docs/_build/html/: .buildinfo  contributions.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  source_object.html  starting.html
docs/_build/html/_sources/: index.rst.txt  starting.rst.txt
docs/_build/html/_sources/notebooks/: starting.ipynb.txt
docs/_build/html/notebooks/: extragalactic.html  starting.html  stellar.html
docs/notebooks/: extragalactic.md  galactic_centre.md  globular_cluster.md  plot_galactic_centre.py  plot_globular_cluster.py  starting.ipynb  starting.md  stellar.md
docs/notebooks/.ipynb_checkpoints/: extragalactic-checkpoint.ipynb  stellar-checkpoint.ipynb
docs/source/: basic_module.rst  conf.py  index.rst  source_object.rst  starting.rst  stellar_module.rst
docs/source/reference/: modules.rst  scopesim_templates.basic.galaxy.rst  scopesim_templates.basic.misc.rst  scopesim_templates.basic.rst  scopesim_templates.basic.stars.rst  scopesim_templates.micado.darkness.rst  scopesim_templates.micado.flatlamp.rst  scopesim_templates.micado.rst  scopesim_templates.rc.rst  scopesim_templates.rst  scopesim_templates.utils.cluster_utils.rst  scopesim_templates.utils.galaxy_utils.rst  scopesim_templates.utils.general_utils.rst  scopesim_templates.utils.imf.rst  scopesim_templates.utils.rst  scopesim_templates.utils.stars_utils.rst  scopesim_templates.version.rst
scopesim_templates/: __init__.py  defaults.yaml  rc.py  utils.py  version.py
scopesim_templates/advanced/: galaxy.py
scopesim_templates/basic/: __init__.py  basic.py  exgal_models.py  galaxy.py  misc.py  models.py  samplers.py  stars.py  utils.py
scopesim_templates/calibration/: __init__.py  calibration.py
scopesim_templates/calibration/micado/: __init__.py  cluster.py  darkness.py
scopesim_templates/calibration/micado/viking_fields/: __init__.py  field_science.eps  field_stdstar.eps  readme.rst  viking_fields.py
scopesim_templates/exgal/: __init__.py
scopesim_templates/extragalactic/: __init__.py  _make_hudf_catalogue.py  agns.py  deep_field.py  exgal_models.py  galaxies.py  galaxy_utils.py  spiral_two_component.fits.bz2
scopesim_templates/extragalactic/data/: hudf_catalogue.fits
scopesim_templates/metis/: __init__.py  laser.py  pinhole_mask.py
scopesim_templates/micado/: __init__.py  cluster.py  darkness.py  empty_sky.py  flatlamp.py  pinhole_masks.py  spectral_calibrations.py
scopesim_templates/micado/data/: masterlinelist_2.1.txt
scopesim_templates/micado/viking_fields/: field_illum.eps  readme.rst  viking_fields.py
scopesim_templates/misc/: __init__.py  donut.py  misc.py
scopesim_templates/stellar/: DonutTemplate.py  J_ApJ_837_30_table3.dat.fits  __init__.py  _gillessen.py  cluster_utils.py  clusters.py  galactic_centre.py  globular_cluster.py  imf.py  stars.py  stars_utils.py  stellar.py
scopesim_templates/tests/: test_rc.py
scopesim_templates/tests/pyobjects/: source_objects.py
scopesim_templates/tests/test_advanced/: test_galaxy.py  test_validate_content.py
scopesim_templates/tests/test_basic/: test_cube.py  test_galaxy.py  test_misc.py  test_spiral.py  test_stars.py
scopesim_templates/tests/test_calibration/: test_calibration.py
scopesim_templates/tests/test_calibration/test_micado/: test_darkness.py  test_flatlamp.py  test_viking_fields.py
scopesim_templates/tests/test_extragalactic/: test_deep_field.py  test_galaxy.py
scopesim_templates/tests/test_extragalactic/data/: toy_hudf.fits
scopesim_templates/tests/test_galaxy/: test_galaxy.py
scopesim_templates/tests/test_micado/: test_cluster.py  test_darkness.py  test_empty_sky.py  test_flatlamp.py  test_pinhole_mask.py  test_spectral_calibrations.py  test_viking_fields.py
scopesim_templates/tests/test_misc/: test_misc.py
scopesim_templates/tests/test_source_validation/: deleteme.fits  test_validate_content.py
scopesim_templates/tests/test_stellar/: test_cluster_utils.py  test_clusters.py  test_galactic_centre.py  test_globular_cluster.py  test_star_utils.py  test_stars.py
scopesim_templates/tests/test_utils/: test_cleared_cache.py  test_cluster_utils.py  test_functions.py  test_rc.py  test_validate_content.py
scopesim_templates/tests/visual_inspection/: plot_galactic_centre_cluster.py  plot_globular_cluster.py  plot_hubble_ultra_deep_field.py
scopesim_templates/utils/: __init__.py  cluster_utils.py  general_utils.py  imf.py  samplers.py  stars_utils.py
