[tool.poetry]
name = "ScopeSim_Templates"
version = "0.6.3a0"
description = "On-sky source templates for ScopeSim"
authors = ["Astar Vienna <astar.astro@univie.ac.at>"]
license = "GPL-3.0-or-later"
readme = "README.md"
maintainers = [
    "Kieran Leschinski <kieran.leschinski@unive.ac.at>",
    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
repository = "https://github.com/AstarVienna/ScopeSim_Templates/"
documentation = "https://scopesim-templates.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.4"
scipy = "^1.14.1"
astropy = "^6.1.5"
matplotlib = "^3.10.1"

docutils = "^0.19"
beautifulsoup4 = "^4.13.3"
lxml = "^5.2.2"
pyyaml = "^6.0.1"
synphot = "^1.5.0"

scopesim = ">=0.9.1"
pyckles = ">=0.4.1"
spextra = ">=0.41.4"
astar-utils = ">=0.3.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupytext = "^1.17.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.2.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AstarVienna/ScopeSim_Templates/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["scopesim_templates/tests/*"]
