[project]
name = "ScopeSim_Templates"
version = "0.8.0a0"
description = "On-sky source templates for ScopeSim"
authors = [
    {name = "Astar Vienna", email = "astar.astro@univie.ac.at"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.3.5,<3.0.0) ; python_version >= '3.13'",
    # SciPy is only an indirect dependency through synphot, but has limited
    # wheels for Python versions, so needs to be specified explicitly.
    "scipy (>=1.15.3,<1.16.0) ; python_version >= '3.10' and python_version < '3.11'",
    "scipy (>=1.17.0,<1.18.0) ; python_version >= '3.11'",

    "astropy (>=6.1.7,<8.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",

    "docutils (>=0.19,<1.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "synphot (>=1.5.0,<2.0.0)",

    "scopesim (>=0.11.2,<0.12.0)",
    "pyckles (>=0.6.0,<1.0)",
    "spextra (>=0.43.1,<1.0)",
    "astar-utils (>=0.5.0,<1.0)",
]

[project.urls]
Repository = "https://github.com/AstarVienna/ScopeSim_Templates/"
Documentation = "https://scopesim-templates.readthedocs.io/"
"Bug Tracker" = "https://github.com/AstarVienna/ScopeSim_Templates/issues"
Changelog = "https://github.com/AstarVienna/ScopeSim_Templates/releases"


[tool.poetry]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupytext = "^1.18.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = ">=0.5.2,<1.0"
myst-nb = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["scopesim_templates/tests/*"]
